# SHM---AI-

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: __init__.py  alembic.ini
backend/alembic/: env.py  script.py.mako
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: assets.py  inspections.py  system.py
backend/app/core/: exceptions.py  logging.py
backend/app/database/: session.py
backend/app/models/: __init__.py  asset.py  base.py  degradation_record.py  detection.py  health_record.py  inspection.py
backend/app/repositories/: __init__.py  asset_repository.py  base.py  detection_repository.py  inspection_repository.py
backend/app/schemas/: __init__.py  asset.py  common.py  inspection.py
backend/app/services/: __init__.py  asset_service.py  base.py  inspection_service.py
degradation/: README.md  __init__.py  carbonation.py  config.py  corrosion.py  models.py  schemas.py  service_life.py
deployment/: README.md
frontend/: README.md
intelligence/: README.md  __init__.py  assessment_service.py  engineering_rules.py  interfaces.py  risk_engine.py  schemas.py  severity_classifier.py
intelligence/rules/: __init__.py
intelligence/scoring/: __init__.py  health_scorer.py
recommendation/: README.md
scripts/: run_dev.py  seed_db.py
tests/: __init__.py  conftest.py
tests/unit/: test_assessment_service.py  test_asset_service.py  test_carbonation.py  test_corrosion.py  test_engineering_rules.py  test_fusion.py  test_loader.py  test_measurements.py  test_pipeline.py  test_polygon.py  test_risk_engine.py  test_service_life.py  test_skeleton.py  test_slicer.py
vision/: README.md  __init__.py  schemas.py
vision/detectors/: __init__.py  base.py  yolo.py
vision/pipeline/: __init__.py  base.py  cv_pipeline.py
vision/postprocessing/: __init__.py  fusion.py  graph.py  measurements.py  polygon.py  skeleton.py
vision/preprocessing/: __init__.py  loader.py  slicing.py
