[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shm-ai"
version = "0.1.0"
description = "AI-Directed Predictive Maintenance & Structural Health Monitoring Platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Database (async SQLite → PostgreSQL)
    "sqlalchemy[asyncio]>=2.0.35",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    # Validation & settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    # File upload & HTTP
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-python-slugify",
]

# Phase 2: Computer Vision Engine
vision = [
    "ultralytics>=8.3.0",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "opencv-python>=4.10.0",
    "numpy>=1.26.0",
    "scikit-image>=0.24.0",    # skeletonization (from legacy)
    "networkx>=3.3.0",          # crack topology graph (from legacy)
    "scipy>=1.14.0",            # convolution for junction detection
    "Pillow>=10.4.0",
    "shapely>=2.0.0",
]

# Phase 5: PDF report export
reports = [
    "weasyprint>=62.0",
    "jinja2>=3.1.0",
]

# Phase 6: Streamlit dashboard
dashboard = [
    "streamlit>=1.38.0",
    "plotly>=5.24.0",
    "pandas>=2.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "vision*", "intelligence*", "degradation*", "recommendation*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]
ignore = ["B008"]  # FastAPI Depends() in function default

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["backend"]
omit = ["*/tests/*", "*/alembic/*"]
